RESOLVED FIXED121815
RenderTextControlSingleLine::updateFromElement() override not needed.
https://bugs.webkit.org/show_bug.cgi?id=121815
Summary RenderTextControlSingleLine::updateFromElement() override not needed.
Andreas Kling
Reported 2013-09-23 17:26:40 PDT
igp
Attachments
GPatch (1.88 KB, patch)
2013-09-23 18:14 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-09-23 18:14:12 PDT
WebKit Commit Bot
Comment 2 2013-09-23 18:43:01 PDT
Comment on attachment 212417 [details] GPatch Clearing flags on attachment: 212417 Committed r156314: <http://trac.webkit.org/changeset/156314>
WebKit Commit Bot
Comment 3 2013-09-23 18:43:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.