RenderTextControlSingleLine::updateFromElement() override not needed. <https://webkit.org/b/121815>

Reviewed by Anders Carlsson.

* rendering/RenderTextControlSingleLine.cpp:
* rendering/RenderTextControlSingleLine.h:


Canonical link: https://commits.webkit.org/139824@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156314 268f45cc-cd09-0410-ab3c-d52691b4dbfc